fixed login on mobile

--- a/login/login.css
+++ b/login/login.css
@@ -252,8 +252,27 @@ a {
 }
 
 @media screen and (max-width: 500px) {
+  .login_header {
+    order: 2;
+    margin: 0;
+  }
+
+  .login_section {
+    order: 1;
+  }
+
+  .login_footer {
+    order: 3;
+  }
+
+  .wholeSiteStart {
+    top: 0;
+    left: 0;
+  }
+
   .login_container {
     min-width: 300px;
+    margin-top: 160px;
   }
 
   .login_form_head h1 {
@@ -286,7 +305,6 @@ a {
   }
 
   .login_footer {
-    /* flex-direction: column; */
     align-items: center;
   }
 
@@ -306,10 +324,6 @@ a {
 }
 
 @media (max-height: 920px) {
-  /* .login_header {
-    margin: 0 !important;
-    margin-left: 34px !important;
-  } */
   .sign_up_container {
     margin-bottom: 0 !important;
   }
@@ -324,15 +338,7 @@ a {
   .arrow {
     top: 32px;
   }
-  .login_section {
-    margin-top: 130px;
-  }
-  /* .wholeSiteStart {
-    top: 0;
-    left: 0;
-    height: 120px;
-    width: 130px;
-  } */
+
   .login_footer {
     margin-top: 0;
     margin-bottom: 16px;
